# fastapi-study

./: .dockerignore  .gitignore  .main.py.swp  Dockerfile  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: .hello.yml.swp  deploy.yml  docker.yml  hello.yml  test.yml
app/: database.py
app/core/: security.py
app/routers/: .items.py.swp  items.py  users.py
app/tests/: test_items.py  test_users.py
routers/: items.py
